# rust-crud-web

./: Cargo.toml  README.md  index.html
src/: input.rs  item.rs  main.rs  modal.rs  model.rs
