[package]
name = "rust-crud-web"
version = "0.1.0"
authors = ["Hendi Santika <hendisantika@yahoo.co.id>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = "1.0.200"
serde_json = "1.0.116"

[lib]
name = "yew_dev_viewer"
path = "src/model.rs"